--- a/index.html
+++ b/index.html
@@ -670,6 +670,49 @@
 
   <p class="fade-in">Истории реальных людей запоминаются куда лучше, чем сухие даты. Здесь — не учебник, а живые свидетельства: дневники, письма, стихи тех, кто пережил 872 дня в осаждённом городе.</p>
 
+  <div style="margin: 36px 0 0;" class="fade-in">
+    <div class="section-label" style="margin-bottom: 20px;">Голоса из прошлого · реальные дневники</div>
+
+    <div class="poem-block" style="margin-bottom: 20px;">
+      <div class="poem-author">Лена Мухина, 17 лет · 9 декабря 1941 года</div>
+      <div class="poem-lines" style="font-style: normal; font-family: 'PT Sans', sans-serif; font-size: 15px; line-height: 1.8;">
+        <p>«Вчера в 8 часов вечера зажёгся свет. Сегодня в школе нам дали без карточек тарелку супа с капустой и стакан желе. До последнего времени пекли лепёшки и варили изредка каши из дуранды. Закупили около 5 кг столярного клея; варим из него желе с лавровым листом и едим с горчицей».</p>
+      </div>
+      <p style="font-size: 12px; color: var(--muted); margin-top: 14px; margin-bottom: 0; font-style: italic;">Лена Мухина — ленинградская школьница. Её дневник «Сохрани мою печальную историю» хранится в архиве Санкт-Петербурга и опубликован в 2011 году.</p>
+    </div>
+
+    <div class="poem-block" style="margin-bottom: 20px;">
+      <div class="poem-author">Лена Мухина · 21 ноября 1941 года, день рождения</div>
+      <div class="poem-lines" style="font-style: normal; font-family: 'PT Sans', sans-serif; font-size: 15px; line-height: 1.8;">
+        <p>«Нет, так жить немыслимо. Господи, когда же конец мучениям!! И это мой праздник, мой день рождения, который бывает только раз в году. Я помню, в этот день всегда пекли пирог и крендель. Мы сидели за столом, пили чай, вино, чокались. На столе всегда были конфеты, пирожное… Нет, никогда мне не забыть 21-е ноября 1941 года».</p>
+      </div>
+    </div>
+
+    <div class="poem-block" style="margin-bottom: 20px;">
+      <div class="poem-author">Юра Рябинкин, школьник · 6 января 1942 года, последняя запись</div>
+      <div class="poem-lines" style="font-style: normal; font-family: 'PT Sans', sans-serif; font-size: 15px; line-height: 1.8;">
+        <p>«Силы из меня уходят, уходят, плывут… А время тянется, тянется, и длинно, долго!.. О господи, что со мной происходит?»</p>
+      </div>
+      <p style="font-size: 12px; color: var(--muted); margin-top: 14px; margin-bottom: 0; font-style: italic;">Через два дня мама с сестрой уехали в эвакуацию — Юра был слишком слаб, чтобы подняться. Он погиб в блокадном Ленинграде.</p>
+    </div>
+
+    <div class="poem-block" style="margin-bottom: 20px;">
+      <div class="poem-author">Из блокадного дневника · зима 1941–1942</div>
+      <div class="poem-lines" style="font-style: normal; font-family: 'PT Sans', sans-serif; font-size: 15px; line-height: 1.8;">
+        <p>«…встали, а чай кипятить не из чего… Я пошёл в сад и набрал ведро снегу… вскипятили чай. Не особенно вкусно, с грязью… За хлебом громаднейшие очереди. Мать целый день лежит…»</p>
+      </div>
+      <p style="font-size: 12px; color: var(--muted); margin-top: 14px; margin-bottom: 0; font-style: italic;">Источник: Президентская библиотека им. Б.Н. Ельцина, коллекция «Блокадные письма и дневники».</p>
+    </div>
+
+    <div class="poem-block" style="margin-bottom: 8px;">
+      <div class="poem-author">Из дневника Володи Гришина · 2 января 1942 года</div>
+      <div class="poem-lines" style="font-style: normal; font-family: 'PT Sans', sans-serif; font-size: 15px; line-height: 1.8;">
+        <p>«Хлеба дают по 350 грамм, но качество его ухудшилось, в магазине ничего нет, говорят что не будет. Мама ушла толкаться, говорит…»</p>
+      </div>
+      <p style="font-size: 12px; color: var(--muted); margin-top: 14px; margin-bottom: 0; font-style: italic;">Запись обрывается на полуслове. Дневник хранится в Государственном историческом музее. Сам Володя умер от голода 13 марта 1942 года.</p>
+    </div>
+  </div>
+
   <div class="stat-row fade-in">
     <div class="stat-box">
       <div class="stat-num">872</div>
