--- a/index.html
+++ b/index.html
@@ -273,8 +273,12 @@
       <span class="l">погибших жителей</span>
     </div>
     <div class="stat">
-      <span class="n">97%</span>
-      <span class="l">умерли от голода и мороза</span>
+      <span class="n">546 тыс.</span>
+      <span class="l">жителей осталось к концу</span>
+    </div>
+    <div class="stat">
+      <span class="n">~1,1 млн</span>
+      <span class="l">человек эвакуировано</span>
     </div>
   </div>
 
@@ -419,7 +423,7 @@
   <p>Картины о битвах Великой Отечественной войны. Авторские плакаты Сергея Вепрева, работы художников Загорского, Разбиновича, Джанелидзе, Котова. Статуя овчарки Альмы — в войну она спасла около 300 раненых.</p>
 
   <h3>Часть II — Грузовик на льду Ладоги</h3>
-  <p>Полномасштабная модель советского грузовика, перевозившего горожан по Дороге жизни. Внутри — восковые фигуры истощённых людей. По словам экскурсовода: «Кажется, словно смотришь на реального больного человека».</p>
+  <p>Полномасштабная модель советского грузовика, перевозившего горожан по Дороге жизни. Внутри — восковые фигуры истощённых людей. Кажется, словно смотришь на реального больного человека — моё личное впечатление от этого экспоната.</p>
 
   <h3>Часть III — Зал памяти жертв нацизма</h3>
   <p>Личные вещи жертв — монеты, письма, обувь — переданы музею после Нюрнбергского процесса. Здесь же документы о нормах выдачи хлеба и сведения о болезнях от голода: дистрофия, цинга, авитаминоз.</p>
